force-app/main/default/objects/Account/fields/Cimatron_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Cimatron_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cimatron Checkbox</label>
    <type>Checkbox</type>
</CustomField>