force-app/main/default/objects/Account/fields/Cribwise_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Cribwise_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cribwise Checkbox</label>
    <type>Checkbox</type>
</CustomField>