force-app/main/default/objects/Account/fields/Is_Mega_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Mega_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mega Customer</label>
    <type>Checkbox</type>
</CustomField>